# agentic_learning_coach

./: .env.example  .gitignore  COMPLETE_APPLICATION_TEST_REPORT.md  COMPLETE_DEMO_VIDEO_SCRIPT.md  DEMO_SCRIPT.md  DETAILED_HACKATHON_DEMO_SCRIPT.md  DEVLOG.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCED_HACKATHON_DEMO_SCRIPT.md  HACKATHON_COMPLETION_SUMMARY.md  HACKATHON_DEMO_SCRIPT.md  HACKATHON_REVIEW.md  HACKATHON_SCORE_FINAL.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_BROWSER_TESTING_REPORT.md  Makefile  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  README.md  SCREENSHOT_CAPTURE_REPORT.md  SETUP_GUIDE.md  TASK_8_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  UI_DYNAMIC_VALUES_TEST_REPORT.md  agentic-learning-coach-architecture.md  alembic.ini  commit-message.txt  convert-diagrams.bat  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  docker-security.yml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.kiro/hooks/: auto-test-generator.md  code-quality-gate.md  learning-path-validator.md  learning-streak-notifier.md
.kiro/prompts/: assess-learner.md  cors-and-api-key-fix.md  cors-port-fix-complete.md  create-curriculum.md  debug-learning-content-issue.md  debug-learning-issue.md  deployment-automation.md  generate-exercise.md  learning-content-backend-fix.md  learning-content-fix-summary.md  performance-optimization.md  review-submission.md  testing-automation.md
.kiro/steering/: 00_project_overview.md  01_architecture_clean_boundaries.md  02_coding_standards_solid.md  03_agent_roles_handoff_protocol.md  04_workflows_intents_routing.md  05_tools_mcp_discipline.md  06_postgres_data_model_migrations.md  07_qdrant_vector_store_rules.md  08_security_privacy_safety.md  09_observability_logging.md  10_testing_quality_gates.md  11_demo_script_acceptance.md
.kiro/system-reviews/: agentic-learning-coach-review.md
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_enriched_learning_content_tables.py  cd42d69f3345_initial_migration_with_all_tables.py
archive/runner-service-20260127/: Dockerfile  main.py  requirements.txt
docs/: API_REFERENCE.md  cleanup-plan.md  cleanup-summary.md
examples/: agents_usage_demo.py  base_agent_usage.py  profile_and_curriculum_integration.py  secure_code_execution_usage.py  security_validator_demo.py
frontend/: .env.development  .env.docker  .env.example  .eslintrc.security.js  .eslintrc.test.js  .npmrc  .percy.yml  .prettierignore  .secrets.baseline  Dockerfile  TASK_13_COMPLETION_SUMMARY.md  TASK_19_COMPLETION_SUMMARY.md  TASK_21_COMPLETION_SUMMARY.md  TASK_24_COMPLETION_SUMMARY.md  TASK_29_COMPLETION_SUMMARY.md  TASK_30_COMPLETION_SUMMARY.md  TASK_31_COMPLETION_SUMMARY.md  TASK_32_COMPLETION_SUMMARY.md  TASK_3_COMPLETION_SUMMARY.md  TASK_4_COMPLETION_SUMMARY.md  TESTING.md  WEB_UI_IMPLEMENTATION_COMPLETE.md  bundlesize.config.json  cypress.config.ts  default.conf  deploy.config.json  docker-entrypoint.sh  docker-monitoring.yml  healthcheck.sh  index.html  jest.config.ts  lighthouserc.js  nginx.conf  nginx.prod.conf  package-lock.json  package.json  package.json.full  tailwind.config.js  test-setup.sh  tsconfig.json  (+2 more)
frontend/.zap/: rules.tsv
monitoring/: prometheus.yml
runner_service/: Dockerfile  __init__.py  requirements.txt
scripts/: cli.py  demo-recording-setup.sh  demo-test.bat  demo-test.sh  demo.py  dev-setup.bat  dev-setup.sh  dev.py  docker-deploy.sh  init-db.sql  init_db.py  manage_db.py  start-all.sh  take-screenshots.js  test-setup.bat  test-setup.sh
tests/: test_basic_setup.py  test_health_endpoints.py  test_infrastructure_setup.py
(+558 files in other folders)
